Add result printout to HandleExceptionsWithMultipleFuturesAndExecutor, change output to be inline with other HandleException classes.